# lazy_promotions_artifact

./: README.md  requirements.txt
scripts/: .gitignore  datasets.txt  docs_writer.py  generate_figures.py  matplotlib_wrapper.py  old_generate_figures.py  parse_data.py  process_data.py  style.py
simulator/: CMakeLists.txt  README.md
simulator/libCacheSim/cache/: cache.c  cacheObj.c
simulator/libCacheSim/cache/eviction/: AGE.c  ARC_Batch.c  ARC_Delay.c  ARC_FR.c  ARC_LRU.c  ARC_Prob.c  ARCv0.c  Belady.c  BeladyClock.c  CMakeLists.txt  Clock.c  DelayClock.c  DelayFR.c  Delay_offline.c  Delay_online.c  FIFO.c  FrozenHot.c  HOTCache.c  LRU.c  LRUProb.c  LRUdelay.c  LRUdelayv1.c  LeCaRv0.c  RandomBelady.c  RandomK.c  RandomLRU.c  RandomTwo.c  SLRUv0.c  TwoQ.c  TwoQ_Batch.c  TwoQ_Delay.c  TwoQ_FR.c  TwoQ_LRU.c  TwoQ_Prob.c  ageprobclock.c  bc.c  filter_clock.c  freqprobclock.c  lpFIFO_batch.c  lpFIFO_shards.c  (+5 more)
simulator/libCacheSim/dataStructure/hashtable/: chainedHashTableV2.c  chainedHashTableV2.h  hashtable.h  hashtableStruct.h
simulator/libCacheSim/include/libCacheSim/: cache.h  cacheObj.h  evictionAlgo.h  reader.h  request.h
simulator/libCacheSim/profiler/: simulator.c
simulator/libCacheSim/traceReader/: reader.c
simulator/libCacheSim/traceReader/customizedReader/: binaryUtils.h
simulator/libCacheSim/traceReader/customizedReader/oracle/: oracleGeneralBin.h
simulator/scripts/: data_gen.py
